<resources>
    <string name="app_name">Minhas Atividades</string>
    <string name="action_settings">Configurações</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Próximo</string>
    <string name="previous">Anterior</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menutitle_addActivity">Adicionar Atividade</string>
    <string name="menumain_addActivity">Adicionar Atividade</string>
    <string name="menumain_showDurations">Relatório</string>
    <string name="menumain_settings">Configurações</string>
    <string name="menumain_showAbout">Autor</string>
    <string name="menumain_generate">Gerar Dados</string>
    <string name="no_activity_message">Nenhuma Atividade Selecionada</string>
    <string name="edit_button_description">Botão para Editar Detalhes da Descrição</string>
    <string name="delete_button_description">Botão para Deletar Detalhes Descrição</string>
    <string name="add_edit_name_hint">Nome Atividade: obrigatório</string>
    <string name="add_edit_description_hint">Descrição Atividade: opcional</string>
    <string name="add_edit_sort_hint">Ordem: crescente</string>
    <string name="add_edit_save_text">Salvar</string>
    <string name="title_activity_add_edit">Adicionar e Editar Atividade</string>
    <string name="instructions_heading">Instruções</string>
    <string name="instructions">Use o botão (+) na barra de ferramentas acima para criar novas atividades.\n\n Atividades com numero baixo ficarão na parte superior da lista. Atividades com o mesmo numero ficarão ordenados alfabeticamente.\n\n Tocar em cima de uma atividade acionará o cronômetro para a atividade tocada (e irá parar o cronômetro para a ativade tocada anteriormente). \n\nCada atividade possui os botões Editar e Deletar onde será possível alterar ou excluir os detalhes da atividade e a ativadade em sí.</string>

</resources>